css/group.scss
---
---

$gray: #999;
$light-gray: #EEE;

/* Space out content a bit */
body {
    padding-top: 20px;
}

.header {
    border-bottom: 1px solid $light-gray;
    padding-bottom: 10px;
    margin-bottom: 20px;
    text-align: center;
    position: sticky;
    z-index: 1000;
    background-color: white;
    top: 0;
}

.footer {
    margin-top: 19px; 
    color: $gray;
    border-top: 1px solid $light-gray;
    text-align: center;
    font-size: .9em;

    a:link, a:visited {
        color: $gray;
    }
}

.fa {
    color: $gray;
}
a > .fa {
    // make sure that font-awesome icons are underlined in links
    display: inline;
}

/* /\* Customize container *\/ */
/* @media (min-width: 768px) { */
/*     .container { */
/*         max-width: 730px; */
/*     } */
/* } */

/* Jumbotron */
.jumbotron {
    text-align: justify;
    padding-top: 1.5em;
    padding-bottom: 0.5em;
    font-size: 100%;
    border-bottom-left-radius: 8.8px;
    border-bottom-right-radius: 8.8px;
    border-top-left-radius: 8.8px;
    border-top-right-radius: 8.8px;
}

/* Group logo */
#logo {
    width: 480px;
    margin: 2px 0 8px 0;
    max-width: 100%;
}

/* Front page news. */
ul.news {

    .date {
        color: $gray;
        font-weight: bold;
    }

    > li {
        margin-top: 1em;
    }
}

@media (min-width: 576px) {
    .project-people { column-count: 2 }
    .card-columns   { column-count: 2 }
}

@media (min-width: 768px) {
    .role.grad      { column-count: 2 }
    .project-people { column-count: 2 }
    .card-columns   { column-count: 4 }
}

.title img {
    max-width: 50%;
}

section {
    margin-bottom: 2em;
}

.profile {
    object-fit: cover; // makes sure it's cropped
}

.noprofile {
    circle {
        fill: $light-gray;
    }
    text {
        font-weight: 700;
        fill: white;
    }
}

.card {

    .profile {
        height: 40px;
        width: 40px;
        margin: 3px;
    }

    .card-footer { padding: 0.5em }

    .card-title { letter-spacing: 0px; }

    img { border-radius: 8.8px !important; }
}

.person {

    margin-bottom: 10px;

    .profile {
        height: 120px;
        width: 120px;
    }

    .bio {
        color: $gray;
    }

    .person-name {
        margin: 0;
    }
}

.person-without-image {
    margin: 0;

    .bio {
        margin-left: 1em;
    }
}

svg {
    // make the alignment just like img from bootstrap's reboot.scss
    vertical-align: middle;
}

img.pic {
  border-radius: 8.8px !important;
  background-color: white;
  padding: 0
}

@media screen and (max-width: 800px) {
  img.pic {
    width: 98%;
    float: none;
    text-align: center;
  }
}

@media screen and (min-width: 800px) {
  .table {
    width: 68%;
  }

  .jumbotron {
    width: 68%;
  }

  img.pic {
    width: 30%;
  }
}

.__dimensions_badge_embed__ {
  display:inline;
  vertical-align:text-top;
  
}
.__dimensions_badge_embed__::after {
  content: none !important;
  display: none !important;
}

.rounded-circle {
  border-radius: 8.8px !important;
}

div.col-sm-10 img {
  max-width: 617px;
}

figure {
  display: block;
  margin: 0 auto;
  text-align: center;
}

figure img, figure iframe {
  display: block;
  margin: 8px auto;
  height: auto;
}

figure img {
  width: 60%;
}

figure iframe, figure video {
  width: 672px;
  height: 378px;
}

@media (max-width: 768px) {
  figure img, figure iframe {
    width: 100%;
  }
}

